objects/Roles__c.object
<CustomObject>
    <description>Other Business Roles that the Contact is associated with</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Contact_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this contact currently active for this role</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, TEXT(Role__c), &quot;_self&quot;)</formula>
        <label>Role Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Firstname__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <label>Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lastname__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets this role as the primary Role which appears on the contact related record</description>
        <label>Primary Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Asset Consultant</fullName>
                </value>
                <value>
                    <fullName>Broker - Dealing</fullName>
                </value>
                <value>
                    <fullName>Business Executive / Business Unit Head / Partner</fullName>
                </value>
                <value>
                    <fullName>CEO / Managing Director / President</fullName>
                </value>
                <value>
                    <fullName>CFO / Financial Director / Finance Partner</fullName>
                </value>
                <value>
                    <fullName>Chairman / Board member</fullName>
                </value>
                <value>
                    <fullName>Chief Investment Officer COO / CIO / CTO / CMO</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Legal Representative</fullName>
                </value>
                <value>
                    <fullName>Markets - Administration</fullName>
                </value>
                <value>
                    <fullName>Markets - Dealing</fullName>
                </value>
                <value>
                    <fullName>Markets - Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Portfolio Manager</fullName>
                </value>
                <value>
                    <fullName>Project Manager / Consultant / Analyst / Engineer</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Treasurer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Disable_Primary_Role</fullName>
        <active>true</active>
        <description>Prevents user from unchecking the Primary Role check box</description>
        <errorConditionFormula>AND (
 Apex_Context__c  = false,
 ISCHANGED(Primary_Role__c),
 Primary_Role__c = false
)</errorConditionFormula>
        <errorMessage>Error: You cannot uncheck Primary Role.</errorMessage>
    </validationRules>
</CustomObject>